
    Or, alternatively, you could write two wrappers 'fping' and 'fping6',
    that set respectively the options '-4' and '-6' when calling the original
    fping binary.

  * Version 4.0
  * (feature) Unified 'fping' and 'fping6' into one binary (#80)
  * (feature) --enable-ipv6 is now default
  * (feature) New option '-4' to force IPv4
  * (feature) New option '-6' to force IPv6

2017-02-09  David Schweikert  <david@schweikert.ch>
  * Version 3.16
  * (feature) Support kernel-timestamping of received packets (#46)
  * (feature) Simplify restrictions: only -i >= 1 and -p >= 10 are enforced now
  * (bugfix) Fix option -m to return all IPs of a hostname
  * (bugfix) Fix option -H (ttl) for IPv6
  * (bugfix) Fix option -M (don't fragment) for IPv6
  * (bugfix) Fix option -O (ToS) for IPv6
  * (bugfix) Fix compatibility issue with AIX (#69, @blentzgh)
  * (bugfix) Fix option -q not suppressing some ICMP error messages (#83)
  * (bugfix) Fix option -M expecting an argument, when it shouldn't
  * (bugfix) Fix minor issues found by Coverity Scan

2017-01-11  David Schweikert  <david@schweikert.ch>
  * Version 3.15
  * (bugfix) Fix compiler errors on platforms other than Linux (related
             to the new -M option, #109)
  * Test suite fixes for macOS

2017-01-10  David Schweikert  <david@schweikert.ch>
  * Version 3.14
  * (feature) Ignore network and broadcast for cidrs /31 and /32 (#102, Martin Topholm)
  * (feature) New option '-M' to set the "Don't Fragment" flag (#91, Don Bowman) 
  * (feature) New option '-N' to output statistics for netdata (see: http://my-netdata.io/, #105, Costa Tsaousis)
  * (feature) New option '-o' to calculate total outage time (#90, @jgerbeck)
  * (bugfix) Exit code should be 2 when the hostname can't be resolved
            (fixes #98, reported by @green-fox)
  * (bugfix)  Fix issue compliling on RHEL/Centos 7 (#95, @jbackman)
  * (bugfix) Lower -i limit to 1 instead of 10
  * (bugfix) Improve interval preciseness of -Q reporting