@@ -52,6 +52,7 @@ dnl Checks for programs.
 
 AC_PROG_CC
 AM_PROG_CC_C_O
+AC_PROG_CC_STDC
 AC_PROG_CPP
 AC_PROG_INSTALL
 
